--- a/index.html
+++ b/index.html
@@ -4,15 +4,20 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width">
 
-  <title>368 Website Starter</title>
+  <title>Modernizer</title>
  
   <link rel="stylesheet" href="http://necolas.github.io/normalize.css/3.0.2/normalize.css">  
   <link rel="stylesheet" href="css/styles.css">	
+
+  <script type="text/javascript" src="js/modernizr.js"></script>
 	
 </head>
 <body>
 	
-	<h1>378</h1>
+	<h1>Modernizr Tests</h1>
+
+	<img src="img/logo.svg" id="svg-logo">
+	<img src="img/logo.svg" id="png-logo">
 
 
   <script type="text/javascript" src="js/scripts.js"></script>
