--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 	<h1>Modernizr Tests</h1>
 
 	<img src="img/logo.svg" id="svg-logo">
-	<img src="img/logo.svg" id="png-logo">
+	<img src="img/logo.png" id="png-logo">
 
 
   <script type="text/javascript" src="js/scripts.js"></script>
