--- a/index.html
+++ b/index.html
@@ -3,21 +3,24 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width">
+ 
 
-  <title>Modernizer</title>
+  <title>Week 4 Check In</title>
  
   <link rel="stylesheet" href="http://necolas.github.io/normalize.css/3.0.2/normalize.css">  
   <link rel="stylesheet" href="css/styles.css">	
 
-  <script type="text/javascript" src="js/modernizr.js"></script>
+    <script type="text/javascript" src="js/modernizr.js"></script>
 	
 </head>
 <body>
 	
-	<h1>Modernizr Tests</h1>
+<body>
+	
+	<h1>Week 4 Check-In</h1>
 
-	<img src="img/logo.svg" id="svg-logo">
-	<img src="img/logo.png" id="png-logo">
+	<img src="http://iconmonstr.com/g/gd/makefg.php?i=s2/default/iconmonstr-phone-icon.png&r=0&g=0&b=0" id="phone-icon">
+	<img src="http://iconmonstr.com/g/gd/makefg.php?i=s2/default/iconmonstr-home-4-icon.png&r=0&g=0&b=0" id="home-icon">
 
 
   <script type="text/javascript" src="js/scripts.js"></script>
